unpackaged/main/default/objects/Activity/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Objective__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Case</fullName>
            </value>
            <value>
                <fullName>2nd Case</fullName>
            </value>
            <value>
                <fullName>3rd Case</fullName>
            </value>
            <value>
                <fullName>4th Case</fullName>
            </value>
            <value>
                <fullName>5th Case</fullName>
            </value>
            <value>
                <fullName>6th Case</fullName>
            </value>
            <value>
                <fullName>Surgeon Referral</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Poster</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Podium Significant</fullName>
            </value>
            <value>
                <fullName>Podium Dedicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>