unpackaged/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <formula>text(Event_Type__c )&amp; text(TaskType__c )</formula>
    <label>Activity Type</label>
    <type>Text</type>
</CustomField>