unpackaged/main/default/objects/Activity/fields/Antibiotic_2__c.field-meta.xml
<CustomField>
    <fullName>Antibiotic_2__c</fullName>
    <label>Antibiotic 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Liquid - Amikacin</fullName>
            </value>
            <value>
                <fullName>Liquid - Gentamicin</fullName>
            </value>
            <value>
                <fullName>Liquid - Tobramycin</fullName>
            </value>
            <value>
                <fullName>Powder - Amphotericin</fullName>
            </value>
            <value>
                <fullName>Powder - Caspofungin</fullName>
            </value>
            <value>
                <fullName>Powder - Ceftazidime</fullName>
            </value>
            <value>
                <fullName>Powder - Ceftriaxone</fullName>
            </value>
            <value>
                <fullName>Powder - Daptomycin</fullName>
            </value>
            <value>
                <fullName>Powder - Flucloxacillin</fullName>
            </value>
            <value>
                <fullName>Powder - Fluconazole</fullName>
            </value>
            <value>
                <fullName>Powder - Linezolid</fullName>
            </value>
            <value>
                <fullName>Powder - Meropenem</fullName>
            </value>
            <value>
                <fullName>Powder - Piperacillin</fullName>
            </value>
            <value>
                <fullName>Powder - Rifampacin</fullName>
            </value>
            <value>
                <fullName>Powder - Teicoplanin</fullName>
            </value>
            <value>
                <fullName>Powder - Tigecycline</fullName>
            </value>
            <value>
                <fullName>Powder - Tobramycin</fullName>
            </value>
            <value>
                <fullName>Powder - Vancomycin</fullName>
            </value>
            <value>
                <fullName>Powder - Voriconazole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>