unpackaged/main/default/objects/Activity/fields/Antibiotic_2_mg__c.field-meta.xml
<CustomField>
    <fullName>Antibiotic_2_mg__c</fullName>
    <inlineHelpText>Measured in mg, 1g = 1000mg.</inlineHelpText>
    <label>Antibiotic 2 mg</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>