unpackaged/main/default/objects/Activity/fields/Event_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Sub_Type__c</fullName>
    <label>Event Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Admin Meeting</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Journal</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Surgeon Meeting</fullName>
            </value>
            <value>
                <fullName>Table Top</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>