unpackaged/main/default/objects/Activity/fields/Indication__c.field-meta.xml
<CustomField>
    <fullName>Indication__c</fullName>
    <label>Indication</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>