unpackaged/main/default/objects/Activity/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New User</fullName>
                <label>Acquire new user</label>
            </value>
            <value>
                <fullName>Grow Existing User</fullName>
                <label>Grow existing user</label>
            </value>
            <value>
                <fullName>Peer to Peer Referral</fullName>
                <label>Peer to peer referral</label>
            </value>
            <value>
                <fullName>Advocacy / Promotion</fullName>
                <label>Drive advocacy / promotion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>