unpackaged/main/default/objects/Activity/fields/Other_Antibiotic_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Antibiotic_1__c</fullName>
    <label>Other Antibiotic 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>