unpackaged/main/default/objects/Activity/fields/Other_Antibiotic_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Antibiotic_2__c</fullName>
    <label>Other Antibiotic 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>