unpackaged/main/default/objects/Activity/fields/Set_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>Set_Time_Mins__c</fullName>
    <label>Set Time Mins</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>