unpackaged/main/default/objects/Activity/fields/STIMULAN__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN__c</fullName>
    <description>Type of STIMULAN used in the case.</description>
    <label>STIMULAN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kit</fullName>
            </value>
            <value>
                <fullName>Rapid Cure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>