unpackaged/main/default/objects/Activity/fields/STIMULAN_Amount_cc__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Amount_cc__c</fullName>
    <label>STIMULAN Amount cc</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>