unpackaged/main/default/objects/Activity/fields/Technique__c.field-meta.xml
<CustomField>
    <fullName>Technique__c</fullName>
    <label>Technique</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pre-mix</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>