unpackaged/main/default/objects/Activity/fields/Txt_Contact__c.field-meta.xml
<CustomField>
    <fullName>Txt_Contact__c</fullName>
    <label>Txt_Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>