unpackaged/main/default/objects/Activity/fields/Txt_RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>Txt_RelatedTo__c</fullName>
    <label>Txt_RelatedTo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>