unpackaged/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF( IsTask = true, &quot;Task&quot;, &quot;Event&quot;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>