unpackaged/main/default/objects/Activity/listViews/Jan_s_Activities.listView-meta.xml
<ListView>
    <fullName>Jan_s_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Jan</value>
    </filters>
    <label>Jan&#39;s Activities</label>
    <sharedTo>
        <role>Biocomposites_Manager</role>
    </sharedTo>
</ListView>